change to flask, not static hosting

--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,7 @@
 <head>
 
     <div class="topnav">
-        <a href="home.html"><img width="100px" height="auto" src="logo_purple (1).png"></a>
+        <a href="home.html"><img width="100px" height="auto" src="static/logo_purple (1).png"></a>
         <ul>
             <li><a style="font-family: 'Space Grotesk' " class="active" href="home.html">HOME</a></li>
             <li><a style="font-family: 'Space Grotesk' " href="scout.html">SCOUTING</a></li>
@@ -13,7 +13,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hazy Scout</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="static/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital@1&display=swap" rel="stylesheet">
