--- a/templates/scout.html
+++ b/templates/scout.html
@@ -2,7 +2,7 @@
     <title>Scouter</title>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <div class="topnav">
-        <a href="home.html"><img width="100px" height="auto" src="logo_purple (1).png"></a>
+        <a href="home.html"><img width="100px" height="auto" src="static/logo_purple (1).png"></a>
         <ul>
             <li><a style="font-family: 'Space Grotesk' " href="home.html">HOME</a></li>
             <li><a style="font-family: 'Space Grotesk' " class="active" href="scout.html">SCOUTING</a></li>
@@ -11,8 +11,8 @@
     </div>
 
 <body>
-    <script src="script.js"></script>
-    <link rel="stylesheet" href="style2.css">
+    <script src="static/script.js"></script>
+    <link rel="stylesheet" href="static/style2.css">
 
     <div class="dropDown">
         <label>
