--- a/templates/scout.html
+++ b/templates/scout.html
@@ -1,203 +1,213 @@
+<!DOCTYPE html>
+<html>
 <head>
     <title>Scouter</title>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
+    <link rel="stylesheet" href="static/style2.css">
+</head>
+
+<body>
     <div class="topnav">
         <a href="home.html"><img width="100px" height="auto" src="static/logo_purple (1).png"></a>
         <ul>
             <li><a style="font-family: 'Space Grotesk' " href="home.html">HOME</a></li>
             <li><a style="font-family: 'Space Grotesk' " class="active" href="scout.html">SCOUTING</a></li>
-            <li style="float:right"><a style="font-family: 'Space Grotesk' ">Developed by Soumik Chemudupati</a></li>
+            <li style="float:right"><a style="font-family: 'Space Grotesk' ">Developed by Soumik Chemudupati and Gabe Tao</a></li>
         </ul>
     </div>
+    
+    
 
-<body>
+    <form action="/submit.html" method="POST" onsubmit="return download_csv_file()">
+
+        <div class="dropDown">
+            <label>
+                <bold>WHAT TEAM ARE YOU WATCHING?</bold>
+            </label>
+            <input name="teamNum" class="inp" type="text" id="teamNum" value="0" />
+        </div>
+        <table class="tbl">
+            <thead>
+                <tr>
+                    <th style="font-size: 20px;" class="a" colspan="3">
+                        <center>AUTONOMOUS</center>
+                    </th>
+                </tr>
+                <tr>
+                    <th style="font-size: 20px;">
+                        <center>LEVEL</center>
+                    </th>
+                    <th style="font-size: 20px;">
+                        <center>CONES</center>
+                    </th>
+                    <th style="font-size: 20px;">
+                        <center>CUBES</center>
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr class="active">
+                    <td style="font-weight:bold; color:#8034ba; font-size: 25px;">HIGH</td>
+                    <td>
+                        <button type="button" class="min">-</button>
+                        <input class="inp" type="text" id="auto-high-cones" value="0" />
+                        <button type="button" class="plus">+</button>
+                    </td>
+                    <td>
+                        <button type="button" class="min"">-</button>
+                        <input class="inp" type="text" id="auto-high-cubes" value="0" />
+                        <button type="button" class="plus"">+</button>
+                    </td>
+                </tr>
+                <tr class="active">
+                    <td style="font-weight:bold; color:#8034ba; font-size: 25px;">MID</td>
+                    <td>
+                        <button type="button" class="min">-</button>
+                        <input class="inp" type="text" id="auto-mid-cones" value="0" />
+                        <button type="button" class="plus">+</button>
+                    </td>
+                    <td>
+                        <button type="button" class="min">-</button>
+                        <input class="inp" type="text" id="auto-mid-cubes" value="0" />
+                        <button type="button" class="plus">+</button>
+                    </td>
+                </tr>
+                <tr class="active">
+                    <td style="font-weight:bold; color:#8034ba; font-size: 25px;">LOW</td>
+                    <td>
+                        <button type="button" class="min">-</button>
+                        <input class="inp" type="text" id="auto-low-cones" value="0" />
+                        <button type="button" class="plus">+</button>
+                    </td>
+                    <td>
+                        <button type="button" class="min">-</button>
+                        <input class="inp" type="text" id="auto-low-cubes" value="0" />
+                        <button type="button" class="plus">+</button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+
+
+
+        <table class="tbl2">
+            <thead>
+                <tr>
+                    <th style="font-size: 20px;" class="a" colspan="3">
+                        <center>TELEOP</center>
+                    </th>
+                </tr>
+                <tr>
+                    <th style="font-size: 20px;">
+                        <center>LEVEL</center>
+                    </th>
+                    <th style="font-size: 20px;">
+                        <center>CONES</center>
+                    </th>
+                    <th style="font-size: 20px;">
+                        <center>CUBES</center>
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr class="active">
+                    <td style="font-weight:bold; color:#8034ba; font-size: 25px;">HIGH</td>
+                    <td>
+                        <button type="button" class="min" onclick="decTwo()">-</button>
+                        <input class="inp" type="text" id="teleop-high-cones" value="0" />
+                        <button type="button" class="plus" onclick="incTwo()">+</button>
+                    </td>
+                    <td>
+                        <button type="button" class="min" onclick="decTwob()">-</button>
+                        <input class="inp" type="text" id="teleop-high-cubes" value="0" />
+                        <button type="button" class="plus" onclick="incTwob()">+</button>
+                    </td>
+                </tr>
+                <tr class="active">
+                    <td style="font-weight:bold; color:#8034ba; font-size: 25px;">MID</td>
+                    <td>
+                        <button type="button" class="min" onclick="decTwo2()">-</button>
+                        <input class="inp" type="text" id="teleop-mid-cones" value="0" />
+                        <button type="button" class="plus" onclick="incTwo2()">+</button>
+                    </td>
+                    <td>
+                        <button type="button" class="min" onclick="decTwo2b()">-</button>
+                        <input class="inp" type="text" id="teleop-mid-cubes" value="0" />
+                        <button type="button" class="plus" onclick="incTwo2b()">+</button>
+                    </td>
+                </tr>
+                <tr class="active">
+                    <td style="font-weight:bold; color:#8034ba; font-size: 25px;">LOW</td>
+                    <td>
+                        <button type="button" class="min" onclick="decTwo3()">-</button>
+                        <input class="inp" type="text" id="teleop-low-cones" value="0" />
+                        <button type="button" class="plus" onclick="incTwo3()">+</button>
+                    </td>
+                    <td>
+                        <button type="button" class="min" onclick="decTwo3b()">-</button>
+                        <input class="inp" type="text" id="teleop-low-cubes" value="0" />
+                        <button type="button" class="plus" onclick="incTwo3b()">+</button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+
+        <div class="str">
+            <p>DEFENSE QUALITY</p>
+        </div>
+        <div class="quest">
+            <div class="inner">
+
+                <input type="radio" name="defense" value="none" id="def1" required>Did Not Really Perform Defense<br>
+                <input type="radio" name="defense" value="poor" id="def2">Poor Defense Quality<br>
+                <input type="radio" name="defense" value="average" id="def3">Average Defense Quality<br>
+                <input type="radio" name="defense" value="great" id="def4">Excellent Defense Quality<br>
+            </div>
+        </div>
+
+        <div class="str">
+            <p>SUBSTATION (ask for clarifiation)</p>
+        </div>
+        <div class="quest">
+            <div class="inner">
+
+                <input type="radio" name="sub" value="single" id="sub1">Single Substation<br>
+                <input type="radio" name="sub" value="double" id="sub2">Double Station<br>
+                <input type="radio" name="sub" value="both" id="sub3"> Used Both Substations<br>
+            </div>
+        </div>
+
+        <div class="str">
+            <p>TOTAL PIECES DROPPED (Cubes + Cones)</p>
+        </div>
+        <div class="quest">
+            <button type="button" class="min" onclick="decThree()">-</button>
+            <input class="inp" type="text" id="dropped-pieces" value="0" />
+            <button type="button" class="plus" onclick="incThree()">+</button>
+        </div>
+
+        <div class="str">
+            <p>ADDITIONAL INFO</p>
+        </div>
+        <div class="quest">
+            <div class="inner2">
+
+                <textarea id="info" style="font-size: 15pt;" name="info" cols="50" rows="10"></textarea>
+            </div>
+        </div>
+
+        <div style="padding-bottom: 10px;" class="but">
+            <a><button type="submit" class="button">SUBMIT</button> </a>
+        </div>
+        <br>
+
+    </form>
+
+    
     <script src="static/script.js"></script>
-    <link rel="stylesheet" href="static/style2.css">
-
-    <div class="dropDown">
-        <label>
-            <bold>WHAT TEAM ARE YOU WATCHING?:</bold>
-        </label>
-        <input class="inp" type="text" id="teamNum" value="0" />
-    </div>
-    <table class="tbl">
-        <thead>
-            <tr>
-                <th style="font-size: 20px;" class="a" colspan="3">
-                    <center>AUTONOMOUS</center>
-                </th>
-            </tr>
-            <tr>
-                <th style="font-size: 20px;">
-                    <center>LEVEL</center>
-                </th>
-                <th style="font-size: 20px;">
-                    <center>CONES</center>
-                </th>
-                <th style="font-size: 20px;">
-                    <center>CUBES</center>
-                </th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr class="active">
-                <td style="font-weight:bold; color:#8034ba; font-size: 25px;">HIGH</td>
-                <td>
-                    <button class="min" onclick="dec()">-</button>
-                    <input class="inp" type="text" id="number" value="0" />
-                    <button class="plus" onclick="inc()">+</button>
-                </td>
-                <td>
-                    <button class="min" onclick="decb()">-</button>
-                    <input class="inp" type="text" id="numberb" value="0" />
-                    <button class="plus" onclick="incb()">+</button>
-                </td>
-            </tr>
-            <tr class="active">
-                <td style="font-weight:bold; color:#8034ba; font-size: 25px;">MID</td>
-                <td>
-                    <button class="min" onclick="dec2()">-</button>
-                    <input class="inp" type="text" id="number2" value="0" />
-                    <button class="plus" onclick="inc2()">+</button>
-                </td>
-                <td>
-                    <button class="min" onclick="dec2b()">-</button>
-                    <input class="inp" type="text" id="number2b" value="0" />
-                    <button class="plus" onclick="inc2b()">+</button>
-                </td>
-            </tr>
-            <tr class="active">
-                <td style="font-weight:bold; color:#8034ba; font-size: 25px;">LOW</td>
-                <td>
-                    <button class="min" onclick="dec3()">-</button>
-                    <input class="inp" type="text" id="number3" value="0" />
-                    <button class="plus" onclick="inc3()">+</button>
-                </td>
-                <td>
-                    <button class="min" onclick="dec3b()">-</button>
-                    <input class="inp" type="text" id="number3b" value="0" />
-                    <button class="plus" onclick="inc3b()">+</button>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-
-
-
-    <table class="tbl2">
-        <thead>
-            <tr>
-                <th style="font-size: 20px;" class="a" colspan="3">
-                    <center>TELEOP</center>
-                </th>
-            </tr>
-            <tr>
-                <th style="font-size: 20px;">
-                    <center>LEVEL</center>
-                </th>
-                <th style="font-size: 20px;">
-                    <center>CONES</center>
-                </th>
-                <th style="font-size: 20px;">
-                    <center>CUBES</center>
-                </th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr class="active">
-                <td style="font-weight:bold; color:#8034ba; font-size: 25px;">HIGH</td>
-                <td>
-                    <button class="min" onclick="decTwo()">-</button>
-                    <input class="inp" type="text" id="numberB" value="0" />
-                    <button class="plus" onclick="incTwo()">+</button>
-                </td>
-                <td>
-                    <button class="min" onclick="decTwob()">-</button>
-                    <input class="inp" type="text" id="numberBb" value="0" />
-                    <button class="plus" onclick="incTwob()">+</button>
-                </td>
-            </tr>
-            <tr class="active">
-                <td style="font-weight:bold; color:#8034ba; font-size: 25px;">MID</td>
-                <td>
-                    <button class="min" onclick="decTwo2()">-</button>
-                    <input class="inp" type="text" id="numberB2" value="0" />
-                    <button class="plus" onclick="incTwo2()">+</button>
-                </td>
-                <td>
-                    <button class="min" onclick="decTwo2b()">-</button>
-                    <input class="inp" type="text" id="numberB2b" value="0" />
-                    <button class="plus" onclick="incTwo2b()">+</button>
-                </td>
-            </tr>
-            <tr class="active">
-                <td style="font-weight:bold; color:#8034ba; font-size: 25px;">LOW</td>
-                <td>
-                    <button class="min" onclick="decTwo3()">-</button>
-                    <input class="inp" type="text" id="numberB3" value="0" />
-                    <button class="plus" onclick="incTwo3()">+</button>
-                </td>
-                <td>
-                    <button class="min" onclick="decTwo3b()">-</button>
-                    <input class="inp" type="text" id="numberB3b" value="0" />
-                    <button class="plus" onclick="incTwo3b()">+</button>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-
-    <div class="str">
-        <p>DEFENSE QUALITY</p>
-    </div>
-    <div class="quest">
-        <div class="inner">
-
-            <input type="radio" name="defense" value="no" id="def1" required>Did Not Really Perform Defense<br>
-            <input type="radio" name="defense" value="poor" id="def2">Poor Defense Quality<br>
-            <input type="radio" name="defense" value="avg" id="def3">Average Defense Quality<br>
-            <input type="radio" name="defense" value="grt" id="def4">Excellent Defense Quality<br>
-        </div>
-    </div>
-
-    <div class="str">
-        <p>SUBSTATION (ask for clarifiation)</p>
-    </div>
-    <div class="quest">
-        <div class="inner">
-
-            <input type="radio" name="sub" value="sing" id="sub1">Single Substation<br>
-            <input type="radio" name="sub" value="doub" id="sub2">Double Station<br>
-            <input type="radio" name="sub" value="both" id="sub3"> Used Both Substations<br>
-        </div>
-    </div>
-
-    <div class="str">
-        <p>TOTAL PIECES DROPPED (Cubes + Cones)</p>
-    </div>
-    <div class="quest">
-        <button class="min" onclick="decThree()">-</button>
-        <input class="inp" type="text" id="numberC" value="0" />
-        <button class="plus" onclick="incThree()">+</button>
-    </div>
-
-    <div class="str">
-        <p>ADDITIONAL INFO</p>
-    </div>
-    <div class="quest">
-        <div class="inner2">
-
-            <textarea id="info" style="font-size: 15pt;" name="paragraph_text" cols="50" rows="10"></textarea>
-        </div>
-    </div>
-
-    <div style="padding-bottom: 10px;" class="but">
-        <a><button class="button" onclick="download_csv_file()">SUBMIT</button> </a>
-    </div>
-    <br>
 </body>
+</html>
 <!-- <div class="footer">
     <p><b>Courtesy of LASA Robotics, Software Developed by Soumik Chemudupati</b></p>
 </div> -->
-</head>
-<script>
-</script>
+
