write to csv file

--- a/templates/scout.html
+++ b/templates/scout.html
@@ -18,7 +18,7 @@
     
     
 
-    <form action="/submit.html" method="POST" onsubmit="return download_csv_file()">
+    <form action="/submit.html" method="POST" onsubmit="return download_csv_file(event)">
 
         <div class="dropDown">
             <label>
