--- a/templates/home.html
+++ b/templates/home.html
@@ -5,10 +5,12 @@
     <div class="topnav">
         <a href="home.html"><img width="100px" height="auto" src="static/logo_purple (1).png"></a>
         <ul>
-            <li><a style="font-family: 'Space Grotesk' " class="active" href="home.html">HOME</a></li>
-            <li><a style="font-family: 'Space Grotesk' " href="scout.html">SCOUTING</a></li>
-            <li style="float:right"><a style="font-family: 'Space Grotesk' ">Developed by Soumik Chemudupati</a></li>
+            <li><a style="font-family: 'Space Grotesk' " class = "active"  href="home.html">HOME</a></li>
+            <li><a style="font-family: 'Space Grotesk' "href="scout.html">SCOUTING</a></li>
+            <li><a style = "font-family: 'Space Grotest' "href = "superScout.html">SUPERSCOUT</a></li>
+            <li style="float:right"><a style="font-family: 'Space Grotesk' ">Developed by Soumik Chemudupati and Gabe Tao</a></li>
         </ul>
+    </div>
     </div>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
