--- a/templates/scout.html
+++ b/templates/scout.html
@@ -10,8 +10,9 @@
     <div class="topnav">
         <a href="home.html"><img width="100px" height="auto" src="static/logo_purple (1).png"></a>
         <ul>
-            <li><a style="font-family: 'Space Grotesk' " href="home.html">HOME</a></li>
-            <li><a style="font-family: 'Space Grotesk' " class="active" href="scout.html">SCOUTING</a></li>
+            <li><a style="font-family: 'Space Grotesk' "  href="home.html">HOME</a></li>
+            <li><a style="font-family: 'Space Grotesk' "class = "active"  href="scout.html">SCOUTING</a></li>
+            <li><a style = "font-family: 'Space Grotest' "href = "superScout.html">SUPERSCOUT</a></li>
             <li style="float:right"><a style="font-family: 'Space Grotesk' ">Developed by Soumik Chemudupati and Gabe Tao</a></li>
         </ul>
     </div>
