--- a/templates/scout.html
+++ b/templates/scout.html
@@ -8,12 +8,12 @@
 
 <body>
     <div class="topnav">
-        <a href="home.html"><img width="100px" height="auto" src="static/logo_purple (1).png"></a>
+        <a href="home.html"><img width="100px" height="auto" src="static/lasa_robotics_logo.png"></a>
         <ul>
-            <li><a style="font-family: 'Space Grotesk' "  href="home.html">HOME</a></li>
-            <li><a style="font-family: 'Space Grotesk' "class = "active"  href="scout.html">SCOUTING</a></li>
-            <li><a style = "font-family: 'Space Grotest' "href = "superScout.html">SUPERSCOUT</a></li>
-            <li style="float:right"><a style="font-family: 'Space Grotesk' ">Developed by Soumik Chemudupati and Gabe Tao</a></li>
+            <li><a href="home.html">HOME</a></li>
+            <li><a class = "active"  href="scout.html">SCOUTING</a></li>
+            <li><a href = "superScout.html">SUPERSCOUT</a></li>
+            <li style="float:right"><a>Developed by Soumik Chemudupati and Gabe Tao</a></li>
         </ul>
     </div>
     
@@ -35,20 +35,20 @@
                     </th>
                 </tr>
                 <tr>
-                    <th style="font-size: 20px;">
+                    <th style="font-size: 25px;">
                         <center>LEVEL</center>
                     </th>
-                    <th style="font-size: 20px;">
+                    <th style="font-size: 25px;">
                         <center>CONES</center>
                     </th>
-                    <th style="font-size: 20px;">
+                    <th style="font-size: 25px;">
                         <center>CUBES</center>
                     </th>
                 </tr>
             </thead>
             <tbody>
                 <tr class="active">
-                    <td style="font-weight:bold; color:#8034ba; font-size: 25px;">HIGH</td>
+                    <td style="font-weight:bold; font-size: 25px;">HIGH</td>
                     <td>
                         <button type="button" class="min">-</button>
                         <input class="inp" type="text" id="auto-high-cones" value="0" />
@@ -61,7 +61,7 @@
                     </td>
                 </tr>
                 <tr class="active">
-                    <td style="font-weight:bold; color:#8034ba; font-size: 25px;">MID</td>
+                    <td style="font-weight:bold; font-size: 25px;">MID</td>
                     <td>
                         <button type="button" class="min">-</button>
                         <input class="inp" type="text" id="auto-mid-cones" value="0" />
@@ -74,7 +74,7 @@
                     </td>
                 </tr>
                 <tr class="active">
-                    <td style="font-weight:bold; color:#8034ba; font-size: 25px;">LOW</td>
+                    <td style="font-weight:bold; font-size: 25px;">LOW</td>
                     <td>
                         <button type="button" class="min">-</button>
                         <input class="inp" type="text" id="auto-low-cones" value="0" />
@@ -99,20 +99,20 @@
                     </th>
                 </tr>
                 <tr>
-                    <th style="font-size: 20px;">
+                    <th style="font-size: 25px;">
                         <center>LEVEL</center>
                     </th>
-                    <th style="font-size: 20px;">
+                    <th style="font-size: 25px;">
                         <center>CONES</center>
                     </th>
-                    <th style="font-size: 20px;">
+                    <th style="font-size: 25px;">
                         <center>CUBES</center>
                     </th>
                 </tr>
             </thead>
             <tbody>
                 <tr class="active">
-                    <td style="font-weight:bold; color:#8034ba; font-size: 25px;">HIGH</td>
+                    <td style="font-weight:bold; font-size: 25px;">HIGH</td>
                     <td>
                         <button type="button" class="min" onclick="decTwo()">-</button>
                         <input class="inp" type="text" id="teleop-high-cones" value="0" />
@@ -125,7 +125,7 @@
                     </td>
                 </tr>
                 <tr class="active">
-                    <td style="font-weight:bold; color:#8034ba; font-size: 25px;">MID</td>
+                    <td style="font-weight:bold; font-size: 25px;">MID</td>
                     <td>
                         <button type="button" class="min" onclick="decTwo2()">-</button>
                         <input class="inp" type="text" id="teleop-mid-cones" value="0" />
@@ -138,7 +138,7 @@
                     </td>
                 </tr>
                 <tr class="active">
-                    <td style="font-weight:bold; color:#8034ba; font-size: 25px;">LOW</td>
+                    <td style="font-weight:bold; font-size: 25px;">LOW</td>
                     <td>
                         <button type="button" class="min" onclick="decTwo3()">-</button>
                         <input class="inp" type="text" id="teleop-low-cones" value="0" />
@@ -174,7 +174,7 @@
 
                 <input type="radio" name="sub" value="single" id="sub1">Single Substation<br>
                 <input type="radio" name="sub" value="double" id="sub2">Double Station<br>
-                <input type="radio" name="sub" value="both" id="sub3"> Used Both Substations<br>
+                <input type="radio" name="sub" value="both" id="sub3">Used Both Substations<br>
             </div>
         </div>
 
@@ -198,8 +198,9 @@
         </div>
 
         <div style="padding-bottom: 10px;" class="but">
-            <a><button type="submit" class="button">SUBMIT</button> </a>
+            <button type="submit" class="button">SUBMIT</button>
         </div>
+        
         <br>
 
     </form>
