--- a/templates/submit2.html
+++ b/templates/submit2.html
@@ -8,7 +8,7 @@
 
 <body>
     <div class="topnav">
-        <a href="home.html"><img width="100px" height="auto" src="static/logo_purple (1).png"></a>
+        <a href="home.html"><img width="100px" height="auto" src="static/lasa_robotics_logo.png"></a>
         <ul>
             <li><a style="font-family: 'Space Grotesk' " href="home.html">HOME</a></li>
             <li><a style="font-family: 'Space Grotesk' " href="scout.html">SCOUTING</a></li>
