--- a/templates/home.html
+++ b/templates/home.html
@@ -3,18 +3,18 @@
 <head>
 
     <div class="topnav">
-        <a href="home.html"><img width="100px" height="auto" src="static/logo_purple (1).png"></a>
+        <a href="home.html"><img width="100px" height="auto" src="static/lasa_robotics_logo.png"></a>
         <ul>
-            <li><a style="font-family: 'Space Grotesk' " class = "active"  href="home.html">HOME</a></li>
-            <li><a style="font-family: 'Space Grotesk' "href="scout.html">SCOUTING</a></li>
-            <li><a style = "font-family: 'Space Grotest' "href = "superScout.html">SUPERSCOUT</a></li>
-            <li style="float:right"><a style="font-family: 'Space Grotesk' ">Developed by Soumik Chemudupati and Gabe Tao</a></li>
+            <li><a class="active"  href="home.html">HOME</a></li>
+            <li><a href="scout.html">SCOUTING</a></li>
+            <li><a href="superScout.html">SUPERSCOUT</a></li>
+            <li style="float:right"><a>Developed by Soumik Chemudupati and Gabe Tao</a></li>
         </ul>
     </div>
     </div>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hazy Scout</title>
+    <title>Purple Scout</title>
     <link rel="stylesheet" href="static/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
