--- a/templates/submit.html
+++ b/templates/submit.html
@@ -8,12 +8,12 @@
 
 <body>
     <div class="topnav">
-        <a href="home.html"><img width="100px" height="auto" src="static/logo_purple (1).png"></a>
+        <a href="home.html"><img width="100px" height="auto" src="static/lasa_robotics_logo.png"></a>
         <ul>
-            <li><a style="font-family: 'Space Grotesk' " href="home.html">HOME</a></li>
-            <li><a style="font-family: 'Space Grotesk' " class="active" href="scout.html">SCOUTING</a></li>
-            <li><a style = "font-family: 'Space Grotest' "href = "superScout.html">SUPERSCOUT</a></li>
-            <li style="float:right"><a style="font-family: 'Space Grotesk' ">Developed by Soumik Chemudupati and Gabe Tao</a></li>
+            <li><a href="home.html">HOME</a></li>
+            <li><a class="active" href="scout.html">SCOUTING</a></li>
+            <li><a href = "superScout.html">SUPERSCOUT</a></li>
+            <li style="float:right"><a>Developed by Soumik Chemudupati and Gabe Tao</a></li>
         </ul>
     </div>
     <p>Submitted! Thanks for scouting!</p>
