--- a/templates/superScout.html
+++ b/templates/superScout.html
@@ -8,12 +8,12 @@
 
 <body>
     <div class="topnav">
-        <a href="home.html"><img width="100px" height="auto" src="static/logo_purple (1).png"></a>
+        <a href="home.html"><img width="100px" height="auto" src="static/lasa_robotics_logo.png"></a>
         <ul>
-            <li><a style="font-family: 'Space Grotesk' " href="home.html">HOME</a></li>
-            <li><a style="font-family: 'Space Grotesk' "  href="scout.html">SCOUTING</a></li>
-            <li><a style = "font-family: 'Space Grotest' " class = "active" href = "superScout.html">SUPERSCOUT</a></li>
-            <li style="float:right"><a style="font-family: 'Space Grotesk' ">Developed by Soumik Chemudupati and Gabe Tao</a></li>
+            <li><a href="home.html">HOME</a></li>
+            <li><a href="scout.html">SCOUTING</a></li>
+            <li><a class="active" href="superScout.html">SUPERSCOUT</a></li>
+            <li style="float:right"><a>Developed by Soumik Chemudupati and Gabe Tao</a></li>
         </ul>
     </div>
     
@@ -43,7 +43,7 @@
             </thead>
             <tbody>
                 <tr class="active">
-                    <td style="font-weight:bold; color:#8034ba; font-size: 15px;">RED TEAM 1</td>
+                    <td style="font-weight:bold; font-size: 15px;">RED TEAM 1</td>
                     <td>
                         <select style = "width : 50px; font-size: 20px;"name = "num1red" id = "num1red">
                             <option value = "1">1</option>
@@ -51,7 +51,7 @@
                             <option value = "3">3</option>
                         </select>
                     </td>
-                    <td style="font-weight:bold; color:#8034ba; font-size: 15px;">BLUE TEAM 1</td>
+                    <td style="font-weight:bold; font-size: 15px;">BLUE TEAM 1</td>
                     <td>
                         <select style = "width : 50px; font-size: 20px;"name = "num1blue" id = "num1blue">
                             <option value = "1">1</option>
@@ -61,7 +61,7 @@
                     </td>
                 </tr>
                 <tr class="active">
-                    <td style="font-weight:bold; color:#8034ba; font-size: 15px;">RED TEAM 2</td>
+                    <td style="font-weight:bold; font-size: 15px;">RED TEAM 2</td>
                     <td>
                         <select style = "width : 50px; font-size: 20px;"name = "num2red" id = "num2red">
                             <option value = "1">1</option>
@@ -69,7 +69,7 @@
                             <option value = "3">3</option>
                         </select>
                     </td>
-                    <td style="font-weight:bold; color:#8034ba; font-size: 15px;">BLUE TEAM 2</td>
+                    <td style="font-weight:bold; font-size: 15px;">BLUE TEAM 2</td>
                     <td>
                         <select style = "width : 50px; font-size: 20px;" name = "num2blue" id = "num2blue">
                             <option value = "1">1</option>
@@ -79,7 +79,7 @@
                     </td>
                 </tr>
                 <tr class="active">
-                    <td style="font-weight:bold; color:#8034ba; font-size: 15px;">RED TEAM 3</td>
+                    <td style="font-weight:bold; font-size: 15px;">RED TEAM 3</td>
                     <td>
                         <select style = "width : 50px; font-size: 20px;"name = "num3red" id = "num3red">
                             <option value = "1">1</option>
@@ -87,7 +87,7 @@
                             <option value = "3">3</option>
                         </select>
                     </td>
-                    <td style="font-weight:bold; color:#8034ba; font-size: 15px;">BLUE TEAM 3</td>
+                    <td style="font-weight:bold; font-size: 15px;">BLUE TEAM 3</td>
                     <td>
                         <select style = "width : 50px; font-size: 20px;"name = "num3blue" id = "num3blue">
                             <option value = "1">1</option>
