--- a/templates/scout.html
+++ b/templates/scout.html
@@ -4,6 +4,7 @@
     <title>Scouter</title>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <link rel="stylesheet" href="static/style2.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 
 <body>
@@ -12,20 +13,36 @@
         <ul>
             <li><a style="font-family: 'Space Grotesk' "  href="home.html">HOME</a></li>
             <li><a style="font-family: 'Space Grotesk' "class = "active"  href="scout.html">SCOUTING</a></li>
-            <li><a style = "font-family: 'Space Grotest' "href = "superScout.html">SUPERSCOUT</a></li>
+            <li><a style = "font-family: 'Space Grotesk' "href = "superScout.html">SUPERSCOUT</a></li>
             <li style="float:right"><a style="font-family: 'Space Grotesk' ">Developed by Soumik Chemudupati and Gabe Tao</a></li>
         </ul>
     </div>
-    
-    
 
-    <form action="/submit.html" method="POST" onsubmit="return download_csv_file(event)">
+    <div id="preMatch">
+
+        <p>Select your assigned team:</p>
+
+        <div id="assign">
+            <button class="teamSelect" id="red1">Red 1</button>
+            <button class="teamSelect" id="red2">Red 2</button>
+            <button class="teamSelect" id="red3">Red 3</button>
+            <button class="teamSelect" id="blue1">Blue 1</button>
+            <button class="teamSelect" id="blue2">Blue 2</button>
+            <button class="teamSelect" id="blue3">Blue 3</button>
+        </div>
+        <button class="teamSelect" id="deselect">Deselect</button>
+
+        <p id="waiting">You're scouting <b><span></span></b>. Waiting for super scout to start the match...</p>
+
+    </div>
+
+    <form id="scoutForm" action="/submit.html" method="POST" onsubmit="return download_csv_file(event)">
 
         <div class="dropDown">
             <label>
-                <bold>WHAT TEAM ARE YOU WATCHING?</bold>
+                <bold>YOU ARE WATCHING: <span id="teamNumSpan"></span></bold>
             </label>
-            <input name="teamNum" class="inp" type="text" id="teamNum" value="0" />
+            <input name="teamNum" class="inp hidden" id="teamNum" type="text" value="0" />
         </div>
         <table class="tbl">
             <thead>
@@ -206,6 +223,8 @@
 
     
     <script src="static/script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js" integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA==" crossorigin="anonymous"></script>
+    <script src="static/scout.js"></script>
 </body>
 </html>
 <!-- <div class="footer">
