--- a/templates/submit.html
+++ b/templates/submit.html
@@ -4,6 +4,8 @@
     <title>Scouter</title>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <link rel="stylesheet" href="static/style2.css">
+    <script src="static/jquery.min.js"></script>
+    <script src="static/socketio.min.js"></script>
 </head>
 
 <body>
@@ -17,6 +19,11 @@
         </ul>
     </div>
     <p>Submitted! Thanks for scouting!</p>
+    <p><a href="scout.html">Scout another match</a></p>
+
+    <script>
+
+    </script>
 </body>
 </html>
 <!-- <div class="footer">
