--- a/templates/submit2.html
+++ b/templates/submit2.html
@@ -17,9 +17,10 @@
         </ul>
     </div>
     <p>Submitted! Thanks for super scouting!</p>
+    <p><a href="superScout.html">Scout another match</a></p>
 </body>
 </html>
 <!-- <div class="footer">
-    <p><b>Courtesy of LASA Robotics, Software Developed by Soumik Chemudupati</b></p>
+    <p><b>Courtesy of LASA Robotics, Software Developed by Soumik Chemudupati & Gabe Tao</b></p>
 </div> -->
 
