--- a/templates/superScout.html
+++ b/templates/superScout.html
@@ -4,7 +4,9 @@
     <title>Scouter</title>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <link rel="stylesheet" href="static/style2.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="static/jquery.min.js"></script>
+    <script src="static/socketio.min.js"></script>
+
 </head>
 
 <body>
@@ -18,63 +20,65 @@
         </ul>
     </div>
 
-    <table class="tbl">
-        <thead>
-            <tr>
-                <td>Match number: <input type="number" id="matchNum" min="0" max="999"></td>
-                <td><button id="fetchTeams">Fetch Teams</button></td>
-                <td><button id="startMatch">Start</button></td>
-            </tr>
-        </thead>
-    </table>
+    <form action="/submit2.html" method="POST" onsubmit="return download_csv_file2(event)"> 
 
-    <br>
+        <table class="tbl">
+            <thead>
+                <tr>
+                    <td>Match number: <input type="number" id="matchNum" min="0" max="999"></td>
+                    <td><button type="button" id="fetchTeams">Fetch Teams</button></td>
+                    <td><button type="button" id="sendInfo">Send Info</button></td>
+                </tr>
+            </thead>
+        </table>
 
-    <table class="tbl">
-        <thead>
-            <tr>
-                <th>Scouter</th>
-                <th>Team Number</th>
-                <th>Status</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Red 1</td>
-                <td id="red1teamNum"></td>
-                <td id="red1Status">...</td>
-            </tr>
-            <tr>
-                <td>Red 2</td>
-                <td id="red2teamNum"></td>
-                <td id="red2Status">...</td>
-            </tr>
-            <tr>
-                <td>Red 3</td>
-                <td id="red3teamNum"></td>
-                <td id="red3Status">...</td>
-            </tr>
-            <tr>
-                <td>Blue 1</td>
-                <td id="blue1teamNum"></td>
-                <td id="blue1Status">...</td>
-            </tr>
-            <tr>
-                <td>Blue 2</td>
-                <td id="blue2teamNum"></td>
-                <td id="blue2Status">...</td>
-            </tr>
-            <tr>
-                <td>Blue 3</td>
-                <td id="blue3teamNum"></td>
-                <td id="blue3Status">...</td>
-            </tr>
-        </tbody>
-    </table>
-    <br>
+        <br>
+
+        <table class="tbl">
+            <thead>
+                <tr>
+                    <th>Scouter</th>
+                    <th>Team Number</th>
+                    <th>Status</th>
+                </tr>
+            </thead>
+            <tbody id="scouterStatus">
+                <tr>
+                    <td>Red 1</td>
+                    <td id="red1teamNum"></td>
+                    <td id="red1Status">...</td>
+                </tr>
+                <tr>
+                    <td>Red 2</td>
+                    <td id="red2teamNum"></td>
+                    <td id="red2Status">...</td>
+                </tr>
+                <tr>
+                    <td>Red 3</td>
+                    <td id="red3teamNum"></td>
+                    <td id="red3Status">...</td>
+                </tr>
+                <tr>
+                    <td>Blue 1</td>
+                    <td id="blue1teamNum"></td>
+                    <td id="blue1Status">...</td>
+                </tr>
+                <tr>
+                    <td>Blue 2</td>
+                    <td id="blue2teamNum"></td>
+                    <td id="blue2Status">...</td>
+                </tr>
+                <tr>
+                    <td>Blue 3</td>
+                    <td id="blue3teamNum"></td>
+                    <td id="blue3Status">...</td>
+                </tr>
+            </tbody>
+        </table>
+        <br>
     
    
-    <form action="/submit2.html" method="POST" onsubmit="return download_csv_file2(event)"> 
+    
         <table class="tbl">
             <thead>
                 <tr>
@@ -172,7 +176,6 @@
     </form>
     
     <script src="static/script.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js" integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA==" crossorigin="anonymous"></script>
     <script src="static/superScout.js"></script>
 </body>
 </html>
