--- a/templates/scoutSubmit.html
+++ b/templates/scoutSubmit.html
@@ -19,7 +19,7 @@
         </ul>
     </div>
     <p>Submitted! Thanks for scouting!</p>
-    <p><a href="scout.html">Scout another match</a></p>
+    <p><a href="scout.html"cc>Scout another match</a></p>
 
     <script>
 
