--- a/templates/superScout.html
+++ b/templates/superScout.html
@@ -20,7 +20,7 @@
         </ul>
     </div>
 
-    <form action="/submit2.html" method="POST" onsubmit="return download_csv_file2(event)"> 
+    <form action="/superScoutSubmit.html" method="POST" onsubmit="return download_csv_file2(event)"> 
 
         <table class="tbl">
             <thead>
