--- a/static/style2.css
+++ b/static/style2.css
@@ -136,25 +136,32 @@ li {
   text-align: center;
 }
 
-.min {
-  width: 40px;
-  height: 30px;
-  font-size: 25px;
-  text-align: center;
-  bottom: -3px;
-  position: relative;
-  color: red;
+/* Hide arrows on number input */
+
+/* Chrome, Safari, Edge, Opera */
+.inp::-webkit-outer-spin-button,
+.inp::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
 
-.plus {
+/* Firefox */
+.inp[type=number] {
+  -moz-appearance: textfield;
+}
+
+/* Buttons to left/right of numbers */
+.subtractButton, .addButton {
   width: 40px;
   height: 30px;
   font-size: 25px;
   text-align: center;
   bottom: -3px;
   position: relative;
-  color: green;
 }
+
+.subtractButton {color: red;}
+.addButton {color: green;}
 
 
 .tbl {
