--- a/templates/scout.html
+++ b/templates/scout.html
@@ -40,6 +40,10 @@
         {% block form %}
         {% endblock %}
 
+        <div style="padding-bottom: 10px;" class="but">
+            <button type="submit" class="button">SUBMIT</button>
+        </div>
+
     </form>
 
     
