--- a/static/style.css
+++ b/static/style.css
@@ -7,6 +7,7 @@ body {
   min-height: 100vh;
   background: #111;
   box-sizing: border-box;
+  margin: 0;
 }
 
 /* Link to Cube Effect: https://www.youtube.com/watch?v=nOdDtnHWaDo */
