--- a/templates/forms/ChargedUpScoutForm.html
+++ b/templates/forms/ChargedUpScoutForm.html
@@ -182,14 +182,8 @@
 <div class="quest">
     <div class="inner2">
 
-        {{ form.info }}
+        {{ form.info(class="info") }}
     </div>
 </div>
-
-<div style="padding-bottom: 10px;" class="but">
-    <button type="submit" class="button">SUBMIT</button>
-</div>
-
-<br>
 
 {% endblock %} 
