example forms, templates for 2024 game

--- a/templates/home.html
+++ b/templates/home.html
@@ -34,10 +34,12 @@
         </div>
     </div>
     <div class="txt">
-        <p>
-            <center>Purple Scout</center>
+        <p id="purpleScout">
+            Purple Scout - {{ name }}
         </p>
     </div>
+
+    
     <div class="but">
         <a href="scout.html"><button class="button">GET STARTED!</button> </a>
     </div>
