--- a/static/style.css
+++ b/static/style.css
@@ -90,11 +90,16 @@ body {
 }
 
 .txt {
-  font-family: 'Libre Baskerville', serif;
-  color: #663399;
-  font-size: 100px;
+  
   position: relative;
   bottom: -275px;
+  text-align: center;
+}
+
+#purpleScout {
+  font-family: 'Libre Baskerville', serif;
+  color: #663399;
+  font-size: 50px;
 }
 
 .but {
@@ -117,7 +122,7 @@ body {
   cursor: pointer;
   overflow: hidden;
   position: relative;
-  bottom: -200px;
+  bottom: -250px;
 }
 
 .button::before {
